--- a/Bagel.OpenGL/Bagel.OpenGL.csproj
+++ b/Bagel.OpenGL/Bagel.OpenGL.csproj
@@ -8,6 +8,8 @@
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <AssemblyName>Bagel</AssemblyName>
+    <RootNamespace>Bagel</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Icon.ico" />
