--- a/Bagel.Core/Bagel.Core.csproj
+++ b/Bagel.Core/Bagel.Core.csproj
@@ -7,4 +7,7 @@
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Source\EntityComponentSystem\Managers\" />
+  </ItemGroup>
 </Project>
